--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "author": "skynetlabs",
   "license": "MIT",
   "dependencies": {
-    "@skynetlabs/skynet-nodejs": "https://github.com/SkynetLabs/nodejs-skynet#refs/heads/in-memory-upload",
-    "gun": "^0.2020.1235"
+    "@skynetlabs/skynet-nodejs": "https://github.com/parajbs/nodejs-skynet",
+    "gun": "^0.2020.1237"
   }
 }
